--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -4,7 +4,7 @@ aiohappyeyeballs==2.4.3
     # via
     #   -r requirements.txt
     #   aiohttp
-aiohttp==3.10.9
+aiohttp==3.10.10
     # via
     #   -r requirements.txt
     #   langchain
@@ -21,7 +21,7 @@ annotated-types==0.7.0
     # via
     #   -r requirements.txt
     #   pydantic
-anthropic==0.35.0
+anthropic==0.36.0
     # via
     #   -r requirements.txt
     #   langchain-anthropic
@@ -68,6 +68,10 @@ beautifulsoup4==4.12.3
     #   nbconvert
 bleach==6.1.0
     # via nbconvert
+blis==0.7.11
+    # via
+    #   -r requirements.txt
+    #   thinc
 bracex==2.5.post1
     # via wcmatch
 cached-property==1.5.2
@@ -78,6 +82,12 @@ cachetools==5.5.0
     # via
     #   -r requirements.txt
     #   google-auth
+catalogue==2.0.10
+    # via
+    #   -r requirements.txt
+    #   spacy
+    #   srsly
+    #   thinc
 certifi==2024.8.30
     # via
     #   -r requirements.txt
@@ -94,7 +104,7 @@ cfgv==3.4.0
     # via pre-commit
 chardet==5.2.0
     # via -r requirements.txt
-charset-normalizer==3.3.2
+charset-normalizer==3.4.0
     # via
     #   -r requirements.txt
     #   requests
@@ -108,13 +118,23 @@ click==8.1.7
     #   mkdocs
     #   mkdocstrings
     #   nltk
+    #   typer
+cloudpathlib==0.19.0
+    # via
+    #   -r requirements.txt
+    #   weasel
 colorama==0.4.6
     # via
     #   griffe
     #   mkdocs-material
 comm==0.2.2
     # via ipykernel
-coverage==7.6.1
+confection==0.1.5
+    # via
+    #   -r requirements.txt
+    #   thinc
+    #   weasel
+coverage==7.6.2
     # via
     #   coveralls
     #   pytest-cov
@@ -124,11 +144,17 @@ cryptography==43.0.1
     # via
     #   -r requirements.txt
     #   pyopenssl
+cymem==2.0.8
+    # via
+    #   -r requirements.txt
+    #   preshed
+    #   spacy
+    #   thinc
 dataclasses-json==0.6.7
     # via
     #   -r requirements.txt
     #   langchain-community
-debugpy==1.8.6
+debugpy==1.8.7
     # via ipykernel
 decorator==5.1.1
     # via ipython
@@ -141,14 +167,14 @@ defusedxml==0.7.1
     #   nbconvert
 dill==0.3.9
     # via pylint
-distlib==0.3.8
+distlib==0.3.9
     # via virtualenv
 distro==1.9.0
     # via
     #   -r requirements.txt
     #   anthropic
     #   openai
-django==5.1.1
+django==5.1.2
     # via
     #   -r requirements.txt
     #   django-allauth
@@ -165,7 +191,7 @@ ebooklib==0.18
     # via -r requirements.txt
 executing==2.1.0
     # via stack-data
-faker==30.1.0
+faker==30.3.0
     # via -r requirements.dev.in
 fastjsonschema==2.20.0
     # via nbformat
@@ -195,17 +221,17 @@ genanki==0.13.1
     # via -r requirements.txt
 ghp-import==2.1.0
     # via mkdocs
-google-ai-generativelanguage==0.6.6
+google-ai-generativelanguage==0.6.10
     # via
     #   -r requirements.txt
     #   google-generativeai
-google-api-core==2.20.0
+google-api-core==2.21.0
     # via
     #   -r requirements.txt
     #   google-ai-generativelanguage
     #   google-api-python-client
     #   google-generativeai
-google-api-python-client==2.147.0
+google-api-python-client==2.149.0
     # via
     #   -r requirements.txt
     #   google-generativeai
@@ -221,7 +247,7 @@ google-auth-httplib2==0.2.0
     # via
     #   -r requirements.txt
     #   google-api-python-client
-google-generativeai==0.7.2
+google-generativeai==0.8.3
     # via
     #   -r requirements.txt
     #   langchain-google-genai
@@ -237,7 +263,7 @@ grpcio==1.66.2
     #   -r requirements.txt
     #   google-api-core
     #   grpcio-status
-grpcio-status==1.62.3
+grpcio-status==1.66.2
     # via
     #   -r requirements.txt
     #   google-api-core
@@ -267,7 +293,7 @@ httpx-sse==0.4.0
     # via
     #   -r requirements.txt
     #   langchain-mistralai
-huggingface-hub==0.25.1
+huggingface-hub==0.25.2
     # via
     #   -r requirements.txt
     #   tokenizers
@@ -307,13 +333,15 @@ jedi==0.19.1
     # via ipython
 jinja2==3.1.4
     # via
+    #   -r requirements.txt
     #   jupyter-server
     #   mkdocs
     #   mkdocs-material
     #   mkdocstrings
     #   nbconvert
     #   notebook
-jiter==0.6.0
+    #   spacy
+jiter==0.6.1
     # via
     #   -r requirements.txt
     #   anthropic
@@ -335,7 +363,7 @@ jsonschema==4.23.0
     # via
     #   jupyter-events
     #   nbformat
-jsonschema-specifications==2023.12.1
+jsonschema-specifications==2024.10.1
     # via jsonschema
 jupyter-client==8.0.3
     # via
@@ -366,15 +394,15 @@ jupyter-server-terminals==0.5.3
     # via jupyter-server
 jupyterlab-pygments==0.3.0
     # via nbconvert
-langchain==0.3.2
+langchain==0.3.3
     # via
     #   -r requirements.txt
     #   langchain-community
 langchain-anthropic==0.2.3
     # via -r requirements.txt
-langchain-community==0.3.1
+langchain-community==0.3.2
     # via -r requirements.txt
-langchain-core==0.3.9
+langchain-core==0.3.10
     # via
     #   -r requirements.txt
     #   langchain
@@ -384,7 +412,7 @@ langchain-core==0.3.9
     #   langchain-mistralai
     #   langchain-openai
     #   langchain-text-splitters
-langchain-google-genai==2.0.0
+langchain-google-genai==2.0.1
     # via -r requirements.txt
 langchain-mistralai==0.2.0
     # via -r requirements.txt
@@ -394,16 +422,28 @@ langchain-text-splitters==0.3.0
     # via
     #   -r requirements.txt
     #   langchain
-langsmith==0.1.131
+langcodes==3.4.1
+    # via
+    #   -r requirements.txt
+    #   spacy
+langsmith==0.1.134
     # via
     #   -r requirements.txt
     #   langchain
     #   langchain-community
     #   langchain-core
+language-data==1.2.0
+    # via
+    #   -r requirements.txt
+    #   langcodes
 lxml==5.3.0
     # via
     #   -r requirements.txt
     #   ebooklib
+marisa-trie==1.2.0
+    # via
+    #   -r requirements.txt
+    #   language-data
 markdown==3.7
     # via
     #   mkdocs
@@ -411,7 +451,11 @@ markdown==3.7
     #   mkdocs-material
     #   mkdocstrings
     #   pymdown-extensions
-markupsafe==2.1.5
+markdown-it-py==3.0.0
+    # via
+    #   -r requirements.txt
+    #   rich
+markupsafe==3.0.1
     # via
     #   -r requirements.txt
     #   jinja2
@@ -430,6 +474,10 @@ matplotlib-inline==0.1.7
     #   ipython
 mccabe==0.7.0
     # via pylint
+mdurl==0.1.2
+    # via
+    #   -r requirements.txt
+    #   markdown-it-py
 mergedeep==1.3.4
     # via
     #   mkdocs
@@ -450,7 +498,7 @@ mkdocs-awesome-pages-plugin==2.9.3
     # via -r requirements.dev.in
 mkdocs-get-deps==0.2.0
     # via mkdocs
-mkdocs-material==9.5.39
+mkdocs-material==9.5.40
     # via -r requirements.dev.in
 mkdocs-material-extensions==1.3.1
     # via mkdocs-material
@@ -465,6 +513,12 @@ multidict==6.1.0
     #   -r requirements.txt
     #   aiohttp
     #   yarl
+murmurhash==1.0.10
+    # via
+    #   -r requirements.txt
+    #   preshed
+    #   spacy
+    #   thinc
 mypy==1.11.2
     # via -r requirements.dev.in
 mypy-extensions==1.0.0
@@ -504,12 +558,15 @@ notebook-shim==0.2.4
 numpy==1.26.4
     # via
     #   -r requirements.txt
+    #   blis
     #   fasttext
     #   langchain
     #   langchain-community
+    #   spacy
+    #   thinc
 ollama==0.3.3
     # via -r requirements.txt
-openai==1.51.0
+openai==1.51.2
     # via
     #   -r requirements.txt
     #   langchain-openai
@@ -532,6 +589,9 @@ packaging==24.1
     #   mkdocs
     #   nbconvert
     #   pytest
+    #   spacy
+    #   thinc
+    #   weasel
 paginate==0.5.7
     # via mkdocs-material
 pandocfilters==1.5.1
@@ -553,8 +613,13 @@ pluggy==1.5.0
     # via
     #   allure-python-commons
     #   pytest
-pre-commit==4.0.0
+pre-commit==4.0.1
     # via -r requirements.dev.in
+preshed==3.0.9
+    # via
+    #   -r requirements.txt
+    #   spacy
+    #   thinc
 prometheus-client==0.21.0
     # via
     #   jupyter-server
@@ -563,12 +628,16 @@ prompt-toolkit==3.0.48
     # via
     #   ipython
     #   jupyter-console
+propcache==0.2.0
+    # via
+    #   -r requirements.txt
+    #   yarl
 proto-plus==1.24.0
     # via
     #   -r requirements.txt
     #   google-ai-generativelanguage
     #   google-api-core
-protobuf==4.25.5
+protobuf==5.28.2
     # via
     #   -r requirements.txt
     #   google-ai-generativelanguage
@@ -608,6 +677,7 @@ pydantic==2.9.2
     # via
     #   -r requirements.txt
     #   anthropic
+    #   confection
     #   google-generativeai
     #   langchain
     #   langchain-anthropic
@@ -617,6 +687,9 @@ pydantic==2.9.2
     #   langsmith
     #   openai
     #   pydantic-settings
+    #   spacy
+    #   thinc
+    #   weasel
 pydantic-core==2.23.4
     # via
     #   -r requirements.txt
@@ -627,10 +700,12 @@ pydantic-settings==2.5.2
     #   langchain-community
 pygments==2.18.0
     # via
+    #   -r requirements.txt
     #   ipython
     #   jupyter-console
     #   mkdocs-material
     #   nbconvert
+    #   rich
 pyjwt==2.9.0
     # via -r requirements.txt
 pylint==3.3.1
@@ -638,7 +713,7 @@ pylint==3.3.1
     #   -r requirements.dev.in
     #   pylint-django
     #   pylint-plugin-utils
-pylint-django==2.5.5
+pylint-django==2.6.1
     # via -r requirements.dev.in
 pylint-plugin-utils==0.8.2
     # via pylint-django
@@ -725,7 +800,9 @@ requests==2.32.3
     #   langsmith
     #   mkdocs-material
     #   requests-toolbelt
+    #   spacy
     #   tiktoken
+    #   weasel
 requests-toolbelt==1.0.0
     # via
     #   -r requirements.txt
@@ -738,6 +815,10 @@ rfc3986-validator==0.1.1
     # via
     #   jsonschema
     #   jupyter-events
+rich==13.9.2
+    # via
+    #   -r requirements.txt
+    #   typer
 rpds-py==0.20.0
     # via
     #   jsonschema
@@ -756,6 +837,13 @@ setuptools==75.1.0
     # via
     #   -r requirements.txt
     #   fasttext
+    #   marisa-trie
+    #   spacy
+    #   thinc
+shellingham==1.5.4
+    # via
+    #   -r requirements.txt
+    #   typer
 six==1.16.0
     # via
     #   -r requirements.txt
@@ -765,6 +853,10 @@ six==1.16.0
     #   python-dateutil
     #   rfc3339-validator
     #   transliterate
+smart-open==7.0.5
+    # via
+    #   -r requirements.txt
+    #   weasel
 sniffio==1.3.1
     # via
     #   -r requirements.txt
@@ -779,6 +871,16 @@ soupsieve==2.6
     # via
     #   -r requirements.txt
     #   beautifulsoup4
+spacy==3.7.5
+    # via -r requirements.txt
+spacy-legacy==3.0.12
+    # via
+    #   -r requirements.txt
+    #   spacy
+spacy-loggers==1.0.5
+    # via
+    #   -r requirements.txt
+    #   spacy
 sqlalchemy==2.0.35
     # via
     #   -r requirements.txt
@@ -788,6 +890,13 @@ sqlparse==0.5.1
     # via
     #   -r requirements.txt
     #   django
+srsly==2.4.8
+    # via
+    #   -r requirements.txt
+    #   confection
+    #   spacy
+    #   thinc
+    #   weasel
 stack-data==0.6.3
     # via ipython
 tenacity==8.5.0
@@ -801,13 +910,17 @@ terminado==0.18.1
     #   jupyter-server
     #   jupyter-server-terminals
     #   notebook
+thinc==8.2.5
+    # via
+    #   -r requirements.txt
+    #   spacy
 tiktoken==0.8.0
     # via
     #   -r requirements.txt
     #   langchain-openai
 tinycss2==1.3.0
     # via nbconvert
-tokenizers==0.20.0
+tokenizers==0.20.1
     # via
     #   -r requirements.txt
     #   anthropic
@@ -828,6 +941,7 @@ tqdm==4.66.5
     #   huggingface-hub
     #   nltk
     #   openai
+    #   spacy
 traitlets==5.9.0
     # via
     #   -r requirements.dev.in
@@ -852,6 +966,11 @@ trio==0.26.2
     #   trio-websocket
 trio-websocket==0.11.1
     # via selenium
+typer==0.12.5
+    # via
+    #   -r requirements.txt
+    #   spacy
+    #   weasel
 types-python-dateutil==2.9.0.20241003
     # via arrow
 typing-extensions==4.12.2
@@ -868,6 +987,7 @@ typing-extensions==4.12.2
     #   pydantic-core
     #   selenium
     #   sqlalchemy
+    #   typer
     #   typing-inspect
 typing-inspect==0.9.0
     # via
@@ -888,12 +1008,22 @@ urllib3==2.2.3
     #   selenium
 virtualenv==20.26.6
     # via pre-commit
+wasabi==1.1.3
+    # via
+    #   -r requirements.txt
+    #   spacy
+    #   thinc
+    #   weasel
 watchdog==5.0.3
     # via mkdocs
 wcmatch==10.0
     # via mkdocs-awesome-pages-plugin
 wcwidth==0.2.13
     # via prompt-toolkit
+weasel==0.4.1
+    # via
+    #   -r requirements.txt
+    #   spacy
 webcolors==24.8.0
     # via jsonschema
 webencodings==0.5.1
@@ -906,9 +1036,13 @@ websocket-client==1.8.0
     #   selenium
 werkzeug==3.0.4
     # via -r requirements.txt
+wrapt==1.16.0
+    # via
+    #   -r requirements.txt
+    #   smart-open
 wsproto==1.2.0
     # via trio-websocket
-yarl==1.13.1
+yarl==1.14.0
     # via
     #   -r requirements.txt
     #   aiohttp
