--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 #    uv pip compile requirements.in --output-file=requirements.txt
 aiohappyeyeballs==2.4.3
     # via aiohttp
-aiohttp==3.10.9
+aiohttp==3.10.10
     # via
     #   langchain
     #   langchain-community
@@ -10,7 +10,7 @@ aiosignal==1.3.1
     # via aiohttp
 annotated-types==0.7.0
     # via pydantic
-anthropic==0.35.0
+anthropic==0.36.0
     # via langchain-anthropic
 anyio==4.6.0
     # via
@@ -25,10 +25,17 @@ beautifulsoup4==4.12.3
     # via
     #   -r requirements.in
     #   deep-translator
+blis==0.7.11
+    # via thinc
 cached-property==1.5.2
     # via genanki
 cachetools==5.5.0
     # via google-auth
+catalogue==2.0.10
+    # via
+    #   spacy
+    #   srsly
+    #   thinc
 certifi==2024.8.30
     # via
     #   httpcore
@@ -38,14 +45,27 @@ cffi==1.17.1
     # via cryptography
 chardet==5.2.0
     # via -r requirements.in
-charset-normalizer==3.3.2
+charset-normalizer==3.4.0
     # via requests
 chevron==0.14.0
     # via genanki
 click==8.1.7
-    # via nltk
+    # via
+    #   nltk
+    #   typer
+cloudpathlib==0.19.0
+    # via weasel
+confection==0.1.5
+    # via
+    #   thinc
+    #   weasel
 cryptography==43.0.1
     # via pyopenssl
+cymem==2.0.8
+    # via
+    #   preshed
+    #   spacy
+    #   thinc
 dataclasses-json==0.6.7
     # via langchain-community
 deep-translator==1.11.4
@@ -56,7 +76,7 @@ distro==1.9.0
     # via
     #   anthropic
     #   openai
-django==5.1.1
+django==5.1.2
     # via
     #   -r requirements.in
     #   django-allauth
@@ -83,14 +103,14 @@ fsspec==2024.9.0
     # via huggingface-hub
 genanki==0.13.1
     # via -r requirements.in
-google-ai-generativelanguage==0.6.6
+google-ai-generativelanguage==0.6.10
     # via google-generativeai
-google-api-core==2.20.0
+google-api-core==2.21.0
     # via
     #   google-ai-generativelanguage
     #   google-api-python-client
     #   google-generativeai
-google-api-python-client==2.147.0
+google-api-python-client==2.149.0
     # via google-generativeai
 google-auth==2.35.0
     # via
@@ -101,7 +121,7 @@ google-auth==2.35.0
     #   google-generativeai
 google-auth-httplib2==0.2.0
     # via google-api-python-client
-google-generativeai==0.7.2
+google-generativeai==0.8.3
     # via langchain-google-genai
 googleapis-common-protos==1.65.0
     # via
@@ -111,7 +131,7 @@ grpcio==1.66.2
     # via
     #   google-api-core
     #   grpcio-status
-grpcio-status==1.62.3
+grpcio-status==1.66.2
     # via google-api-core
 h11==0.14.0
     # via httpcore
@@ -130,7 +150,7 @@ httpx==0.27.2
     #   openai
 httpx-sse==0.4.0
     # via langchain-mistralai
-huggingface-hub==0.25.1
+huggingface-hub==0.25.2
     # via tokenizers
 idna==3.10
     # via
@@ -138,7 +158,9 @@ idna==3.10
     #   httpx
     #   requests
     #   yarl
-jiter==0.6.0
+jinja2==3.1.4
+    # via spacy
+jiter==0.6.1
     # via
     #   anthropic
     #   openai
@@ -148,15 +170,15 @@ jsonpatch==1.33
     # via langchain-core
 jsonpointer==3.0.0
     # via jsonpatch
-langchain==0.3.2
+langchain==0.3.3
     # via
     #   -r requirements.in
     #   langchain-community
 langchain-anthropic==0.2.3
     # via -r requirements.in
-langchain-community==0.3.1
+langchain-community==0.3.2
     # via -r requirements.in
-langchain-core==0.3.9
+langchain-core==0.3.10
     # via
     #   -r requirements.in
     #   langchain
@@ -166,7 +188,7 @@ langchain-core==0.3.9
     #   langchain-mistralai
     #   langchain-openai
     #   langchain-text-splitters
-langchain-google-genai==2.0.0
+langchain-google-genai==2.0.1
     # via -r requirements.in
 langchain-mistralai==0.2.0
     # via -r requirements.in
@@ -174,33 +196,53 @@ langchain-openai==0.2.2
     # via -r requirements.in
 langchain-text-splitters==0.3.0
     # via langchain
-langsmith==0.1.131
+langcodes==3.4.1
+    # via spacy
+langsmith==0.1.134
     # via
     #   langchain
     #   langchain-community
     #   langchain-core
+language-data==1.2.0
+    # via langcodes
 lxml==5.3.0
     # via ebooklib
-markupsafe==2.1.5
-    # via werkzeug
+marisa-trie==1.2.0
+    # via language-data
+markdown-it-py==3.0.0
+    # via rich
+markupsafe==3.0.1
+    # via
+    #   jinja2
+    #   werkzeug
 marshmallow==3.22.0
     # via dataclasses-json
+mdurl==0.1.2
+    # via markdown-it-py
 multidict==6.1.0
     # via
     #   aiohttp
     #   yarl
+murmurhash==1.0.10
+    # via
+    #   preshed
+    #   spacy
+    #   thinc
 mypy-extensions==1.0.0
     # via typing-inspect
 nltk==3.9.1
     # via -r requirements.in
 numpy==1.26.4
     # via
+    #   blis
     #   fasttext
     #   langchain
     #   langchain-community
+    #   spacy
+    #   thinc
 ollama==0.3.3
     # via -r requirements.in
-openai==1.51.0
+openai==1.51.2
     # via
     #   -r requirements.in
     #   langchain-openai
@@ -211,11 +253,20 @@ packaging==24.1
     #   huggingface-hub
     #   langchain-core
     #   marshmallow
+    #   spacy
+    #   thinc
+    #   weasel
+preshed==3.0.9
+    # via
+    #   spacy
+    #   thinc
+propcache==0.2.0
+    # via yarl
 proto-plus==1.24.0
     # via
     #   google-ai-generativelanguage
     #   google-api-core
-protobuf==4.25.5
+protobuf==5.28.2
     # via
     #   google-ai-generativelanguage
     #   google-api-core
@@ -239,6 +290,7 @@ pydantic==2.9.2
     # via
     #   -r requirements.in
     #   anthropic
+    #   confection
     #   google-generativeai
     #   langchain
     #   langchain-anthropic
@@ -248,10 +300,15 @@ pydantic==2.9.2
     #   langsmith
     #   openai
     #   pydantic-settings
+    #   spacy
+    #   thinc
+    #   weasel
 pydantic-core==2.23.4
     # via pydantic
 pydantic-settings==2.5.2
     # via langchain-community
+pygments==2.18.0
+    # via rich
 pyjwt==2.9.0
     # via -r requirements.in
 pyopenssl==24.2.1
@@ -280,17 +337,29 @@ requests==2.32.3
     #   langchain-community
     #   langsmith
     #   requests-toolbelt
+    #   spacy
     #   tiktoken
+    #   weasel
 requests-toolbelt==1.0.0
     # via langsmith
+rich==13.9.2
+    # via typer
 rsa==4.9
     # via google-auth
 setuptools==75.1.0
-    # via fasttext
+    # via
+    #   fasttext
+    #   marisa-trie
+    #   spacy
+    #   thinc
+shellingham==1.5.4
+    # via typer
 six==1.16.0
     # via
     #   ebooklib
     #   transliterate
+smart-open==7.0.5
+    # via weasel
 sniffio==1.3.1
     # via
     #   anthropic
@@ -299,20 +368,34 @@ sniffio==1.3.1
     #   openai
 soupsieve==2.6
     # via beautifulsoup4
+spacy==3.7.5
+    # via -r requirements.in
+spacy-legacy==3.0.12
+    # via spacy
+spacy-loggers==1.0.5
+    # via spacy
 sqlalchemy==2.0.35
     # via
     #   langchain
     #   langchain-community
 sqlparse==0.5.1
     # via django
+srsly==2.4.8
+    # via
+    #   confection
+    #   spacy
+    #   thinc
+    #   weasel
 tenacity==8.5.0
     # via
     #   langchain
     #   langchain-community
     #   langchain-core
+thinc==8.2.5
+    # via spacy
 tiktoken==0.8.0
     # via langchain-openai
-tokenizers==0.20.0
+tokenizers==0.20.1
     # via
     #   anthropic
     #   langchain-mistralai
@@ -322,8 +405,13 @@ tqdm==4.66.5
     #   huggingface-hub
     #   nltk
     #   openai
+    #   spacy
 transliterate==1.10.2
     # via -r requirements.in
+typer==0.12.5
+    # via
+    #   spacy
+    #   weasel
 typing-extensions==4.12.2
     # via
     #   anthropic
@@ -334,6 +422,7 @@ typing-extensions==4.12.2
     #   pydantic
     #   pydantic-core
     #   sqlalchemy
+    #   typer
     #   typing-inspect
 typing-inspect==0.9.0
     # via dataclasses-json
@@ -343,7 +432,16 @@ uritemplate==4.1.1
     # via google-api-python-client
 urllib3==2.2.3
     # via requests
+wasabi==1.1.3
+    # via
+    #   spacy
+    #   thinc
+    #   weasel
+weasel==0.4.1
+    # via spacy
 werkzeug==3.0.4
     # via -r requirements.in
-yarl==1.13.1
+wrapt==1.16.0
+    # via smart-open
+yarl==1.14.0
     # via aiohttp
