--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -144,5 +144,6 @@ jobs:
     - name: Upload Coverage to Codecov
       if: always()
       uses: codecov/codecov-action@v4.0.1
-      env:
+      with:
+        fail_ci_if_error: true
         token: ${{ secrets.CODECOV_TOKEN }}
